[package]
name = "rgame"
version = "0.1.0"
authors = ["stefano <s.kouroupis@gmail.com>"]
edition = "2018"

[dependencies]
piston = "0.49.0"
piston2d-graphics = "0.34.0"
piston2d-opengl_graphics = "0.68.0"
piston2d-touch_visualizer = "0.23.0"
rand = "0.7.2"
log = "0.4.8"

[dependencies.pistoncore-sdl2_window]
version = "0.63.0"
optional = true

[dependencies.pistoncore-glfw_window]
version = "0.60.0"
optional = true

[dependencies.pistoncore-glutin_window]
version = "0.63.0"
optional = true

[[bin]]
name = "rgame"

[features]
default = ["include_glutin"]
include_sdl2 = ["pistoncore-sdl2_window"]
include_glfw = ["pistoncore-glfw_window"]
include_glutin = ["pistoncore-glutin_window"]